# aezpz

./: .gitignore  404.html  LICENSE  README.md  api.py  download_globals.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  python-publish.yml
adobe_xdm/: api.py  globals.json  schema.py
aeip/: __init__.py  api.py  globals.json  schema.py
aezpz/: api.py  datasets.py  schema.py
docs/: explanation.md  guides.md  index.md  reference.md  tutorials.md
docs/reference/: api.md  schema.md
docs/stylesheets/: mkdocstrings-recommendation.css
explanation/: index.html
guides/: index.html
reference/: index.html
scripts/: download_globals.py
search/: search_index.json
tutorials/: index.html
