[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aezpz"
dynamic = ["version"]
description = 'Adobe Experience Platform API made easy peasy'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = [
  "aep",
  "adobe",
  "sdk",
]
authors = [
  { name = "Benjamin Earl", email = "14208829+benjameep@users.noreply.github.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "requests",
]

[project.urls]
Documentation = "https://datajoin-org.github.io/aezpz/"
Issues = "https://github.com/datajoin-org/aezpz/issues"
Source = "https://github.com/datajoin-org/aezpz"

[tool.hatch.version]
path = "aezpz/__about__.py"